syntax = "proto3";
package QuyYeuCode.defiloan.defiloan;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "defiloan/params.proto";
import "defiloan/defi_loan.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/QuyYeuCode/Defi-Loan/x/defiloan/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/QuyYeuCode/defiloan/defiloan/params";
  }
  // Queries a DefiLoan by id.
	rpc DefiLoan(QueryGetDefiLoanRequest) returns (QueryGetDefiLoanResponse) {
		option (google.api.http).get = "/QuyYeuCode/defiloan/defiloan/defi_loan/{id}";
	}

	// Queries a list of DefiLoan items.
	rpc DefiLoanAll(QueryAllDefiLoanRequest) returns (QueryAllDefiLoanResponse) {
		option (google.api.http).get = "/QuyYeuCode/defiloan/defiloan/defi_loan";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetDefiLoanRequest {
	uint64 id = 1;
}

message QueryGetDefiLoanResponse {
	DefiLoan DefiLoan = 1 [(gogoproto.nullable) = false];
}

message QueryAllDefiLoanRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllDefiLoanResponse {
	repeated DefiLoan DefiLoan = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// this line is used by starport scaffolding # 3
